--- a/templates/jobs_list.html
+++ b/templates/jobs_list.html
@@ -5,11 +5,11 @@
 
 <section class="bg-gray-50 mt-10 mb-11 h-screen py-12">
     <div class="max-w-[1240px] mx-auto p-5">
-        <form action="#" method="GET"
+        <form action="{% url 'search' %}" method="GET"
             class="flex flex-col sm:flex-row items-center justify-between w-full py-5 font-medium text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3">
             <div class="w-[100%]">
                 {% csrf_token %}
-                <div class="relative z-0">
+                <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
                         <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
@@ -17,14 +17,14 @@
                                 d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                         </svg>
                     </div>
-                    <input type="text" name="name" id="name"
+                    <input type="text" name="title" id="title"
                         class="bg-gray-50 border ps-10 border-gray-300 text-gray-900 text-[12px] md:text-sm rounded-lg focus:ring-indigo-600 focus:border-indigo-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500"
                         placeholder="Keyword e.g. Frontend Developer" required>
                 </div>
             </div>
 
             <div class="w-[100%]">
-                <select id="location"
+                <select id="category"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-[12px] md:text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500">
                     <option selected="">Select Location</option>
                     <option value="Cape Town">Cape Town</option>
@@ -34,7 +34,7 @@
                 </select>
             </div>
             <div class="w-[100%]">
-                <select id="job_type"
+                <select id="category"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-[12px] md:text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500">
                     <option selected="">Job Type</option>
                     <option value="Remote">Remote</option>
@@ -62,8 +62,7 @@
                 <div class="p-5">
                     <div class="flex justify-between">
                         <h5 class="mb-2 text-xl md:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            Product
-                            Designer
+                           {{ job.title }}
                         </h5>
                         <a href="" class="">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
