--- a/templates/search.html
+++ b/templates/search.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
+
 {% load custom_filters %}
 {% block content %}
-<section class="w-full bg-gray-50 dark:bg-gray-900 md:h-screen pt-[220px] px-8 xl:px-0">
-    <div class="max-w-[1240px] flex flex-col items-center justify-center mx-auto">
-        <h1 class="mb-6 text-3xl xl:text-6xl text-indigo-800 text-center">Get The Right Job You Deserve</h1>
-        <h3 class="mb-6 text-[20px] xl:text-3xl text-indigo-800 text-center">Find jobs, create trackable resumes and
-            enrich
-            you
-            applications</h3>
+
+<section class="bg-gray-50 mt-10 mb-11 h-screen py-12">
+    <div class="max-w-[1240px] mx-auto p-5">
         <form action="{% url 'search' %}" method="GET"
             class="flex flex-col sm:flex-row items-center justify-between w-full py-5 font-medium text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3">
             <div class="w-[100%]">
@@ -52,68 +49,13 @@
                 </button>
             </div>
         </form>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10 mt-11 w-full">
-            <div
-                class="w-full md:max-w-xl bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-5">
-                    <a href="{% url 'jobs_list' %}">
-                        <h5 class="mb-2 text-1xl md:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Job
-                            Seeker</h5>
-                    </a>
-                    <p class="mb-3 text-[12px] md:text-[16px] font-normal text-gray-700 dark:text-gray-400">Browse you
-                        IT Jobs today and start your
-                        career
-                        today</p>
-                    <a href="{% url 'jobs_list' %}"
-                        class="inline-flex  items-center px-3 py-2 text-[12px] md:text-sm font-medium text-center text-white bg-indigo-500 rounded-lg hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">
-                        Browse Job
-                        <svg class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-            <div
-                class="w-full md:max-w-xl bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-5">
-                    <a href="#">
-                        <h5 class="mb-2 text-1xl md:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            Employers</h5>
-                    </a>
-                    <p class="mb-3 text-[12px] md:text-[16px] font-normal text-gray-700 dark:text-gray-400">Post a new
-                        Job to recruit your dream
-                        employee
-                    </p>
-                    <a href="{% url 'add_job' %}"
-                        class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-indigo-500 rounded-lg hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">
-                        Add Job
-                        <svg class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
-
-
-
-
-<section class="bg-slate-400 mt-10 mb-11 h-full py-12">
-    <div class="max-w-[1240px] mx-auto p-5">
-        <h3 class="text-center text-2xl md:text-3xl text-gray-200 font-bold mb-10">Recent Jobs</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        
+        <h2 class="text-center text-3xl">Search Results:</h2>
+        {% if jobs %}
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mt-11">
 
             <!--Start-->
-            
             {% for job in jobs %}
             <div
                 class="w-full bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
@@ -136,14 +78,17 @@
                         </a>
                     </div>
 
-                    <p class="mb-3 font-normal text-[12px] md:text-sm text-gray-500 dark:text-gray-400">{{ job.description|truncatechars:50 }}</p>
+                    <p class="mb-3 font-normal text-[12px] md:text-sm text-gray-500 dark:text-gray-400">Here are the
+                        biggest enterprise
+                        technology
+                        acquisitions of 2021 so far, in reverse chronological order.</p>
 
                     <div
                         class="flex flex-wrap  gap-3 items-center pb-3 mb-3 font-bold text-[12px] text-gray-700  dark:text-gray-400 border-b border-dashed border-gray-200 dark:bg-gray-700 dark:border-gray-600">
                         <p>{{ job.location }}</p>
                         <p>{{ job.job_type }}</p>
                         <p>{{ job.experience }} years</p>
-                        <p>{{ job.salary|money:"R"  }} Monthly</p>
+                        <p>{{ job.salary|money:"R,2"  }} Monthly</p>
                     </div>
                     <div class="flex gap-3 mb-3 text-gray-500 text-[12px] md:text-sm">
                         <p class="flex items-center gap-1">
@@ -183,19 +128,11 @@
             <!--End-->
             {% endfor %}
 
-
         </div>
+        {% else %}
+            <p class="text-2xl">No jobs found matching the search criteria.</p>
+        {% endif %}
     </div>
-
-
 </section>
-
-<div class="flex justify-center mt-11 mb-11">
-    <a href="{% url 'jobs_list' %}"
-        class="inline-flex items-center px-3 py-2 text-xl font-medium text-center text-white bg-indigo-700 rounded-lg hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">
-        View All Jobs
-    </a>
-</div>
-
 
 {% endblock content %}
